@@ -87,6 +87,16 @@ This is the default behavior.
 
     ->new( exclude_does => [ 'Dist::Zilla::Role::Releaser', ] );
 
+## `comments`
+
+This attribute controls how comments are handled.
+
+- `all` - All comments are copied ( **Default** )
+- `authordeps` - Only comments that look like `Dist::Zilla` `AuthorDeps` are copied.
+- `none` - No comments are copied.
+
+( `API` Since `0.003000` )
+
 # COMMENT PRESERVATION
 
 Comments are ( since `v0.002000` ) arbitrarily supported in a very basic way.
