@@ -208,3 +208,4 @@ Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 
 [Prereqs]
+; authordep Pod::Elemental::Transformer::List
