@@ -20,4 +20,6 @@ copyfiles         = LICENSE
 srcreadme         = mkdn
 ; auto_prereqs_skip = File::Find
 
+
 [Prereqs]
+; authordep Pod::Elemental::Transformer::List
