@@ -1,6 +1,8 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.002001
+ [Added / develop requires]
+ - Pod::Elemental::Transformer::List
 
 0.002000 2014-11-08T01:53:39Z
  [Added / configure requires]
