@@ -47,3 +47,5 @@ command = p_method
 [Legal]
 
 
+[-Transformer]
+transformer = List
